--- a/Practical1OLD/solutions.html
+++ b/Practical1OLD/solutions.html
@@ -2177,7 +2177,7 @@ following:</p>
 <p><strong>Solution</strong></p>
 </div>
 <p><span class="math inline">\(P(B) = P(A \cap B) + P(A^c \cap B) =
-0.0456 + 0.2208 = 0.2664\)</span></p>
+0.0456 + 0.0344 = 0.2664\)</span></p>
 </div>
 <ol start="7" style="list-style-type: lower-roman">
 <li>Complete the table</li>
@@ -2366,11 +2366,11 @@ missed.</p>
 <div class="center">
 <p><strong>Solution</strong></p>
 </div>
-<p>Specificity refers to a test’s ability to designate an individual who
-does not have a disease as negative. Therefore, a highly specific test
-means that there are few false positive results, and thus fewer cases of
-disease are treated when they should not be. This is important for
-potentially intrusive treatment procedures.</p>
+<p>Specificity refers to a test’s ability to detect an individual with
+disease as negative Therefore, a highly specific test means that there
+are few false positive results, and thus fewer cases of disease are
+treated when they should not be. This is important for potentially
+intrusive treatment procedures.</p>
 </div>
 <ol start="4" style="list-style-type: lower-alpha">
 <li>Given the two screening methods in Questions 3 and 4, what is the
