typos in practical 2

--- a/Practical2/index.html
+++ b/Practical2/index.html
@@ -1695,7 +1695,7 @@ why that does or does not align with having no clue.</p></li>
 specified?</p></li>
 </ol>
 <p><strong>HINT</strong>: Use the functions <code>plot_beta()</code> and
-<code>summary_beta()</code> from the R package <code>bayesrules</code>
+<code>summarize_beta()</code> from the R package <code>bayesrules</code>
 to help you. Just note that in those functions our <span class="math inline">\(\theta\)</span> is called <span class="math inline">\(\pi\)</span>.</p>
 </div>
 <div id="tune-your-gamma-prior" class="section level1">
